--- a/warfare_unit_generator.ipynb
+++ b/warfare_unit_generator.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Attack `(atk + exp)`: A modifier for d20 rolls made against opponents defense.\n",
     "\n",
-    "Defense `(dfn + siz//2 + exp)`: Basically armor class. If an attack matches or exceeds a unit's defense, the unit takes 1 damage.\n",
+    "Defense `(10 + dfn + siz//2 + exp)`: Basically armor class. If an attack matches or exceeds a unit's defense, the unit takes 1 damage.\n",
     "\n",
     "Range `(rng * 30)`: How far a unit can attack (in feet). Each tile at this scale is 30 ft. on a side.\n",
     "\n",
